[package]
name = "mailcolobus"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mailcolobus"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
claims = "0.7.1"
config = "0.13.3"
false = "0.0.0"
log = "0.4.17"
once_cell = "1.17.1"
rand = "0.8.5"
reqwest = { version = "0.11.16", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde-aux = "4.1.2"
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tokio = { version = "1.27.0", features = ["rt", "macros"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.3"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
url-escape = "0.1.1"
uuid = { version = "1.3.0", features = ["v4"] }
validator = "0.16.0"

[dev-dependencies]
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.96"
wiremock = "0.5.18"
